...
    public static let showsRow = "shows.row"
    public static let showDetail = "show.detail"

    // Library (#520)
    public static let libraryRow = "library.row"
    public static let libraryHistoryLink = "library.history_link"
    public static let libraryPlayError = "library.play_error"

    // Public playlists (#428)
    public static let publicPlaylistsList = "public_playlists.list"
    public static let publicPlaylistTracks = "public_playlist.tracks"


...
